[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "port_manager"
version = "0.1.2"
authors = [
  { name="Yan Jardim Leal", email="yan2005leal@gmail.com" },
]
description = "Um gerenciador de portas simples"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]